[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/PlayerInterface/PlayerInterface.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/BattleInterface/BattleInterface.gd" type="Script" id=2]
[ext_resource path="res://Managers/CharacterBattle/CharacterBattleManager.tscn" type="PackedScene" id=3]
[ext_resource path="res://Managers/AIOpponents/AIOpponentsManager.tscn" type="PackedScene" id=4]

[node name="BattleInterface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerInterface" parent="." instance=ExtResource( 1 )]

[node name="CharacterBattleManager" parent="." instance=ExtResource( 3 )]

[node name="AIOpponentsManager" parent="." instance=ExtResource( 4 )]
[connection signal="ending_turn" from="PlayerInterface" to="." method="_on_PlayerInterface_ending_turn"]
[connection signal="discarded_card" from="CharacterBattleManager" to="." method="_on_CharacterBattleManager_discarded_card"]
[connection signal="drew_card" from="CharacterBattleManager" to="." method="_on_CharacterBattleManager_drew_card"]
[connection signal="reshuffled_card" from="CharacterBattleManager" to="." method="_on_CharacterBattleManager_reshuffled_card"]
